--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-navi">
           <a class="header-logo" href="./index.html"
@@ -58,14 +58,14 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="slogan">
+      <!-- <section class="slogan">
         <div class="container slogan-container">
           <h1 class="slogan-text">Effective Solutions for Your Business</h1>
           <button type="button" class="order-btn">Order Service</button>
         </div>
-      </section>
+      </section> -->
       <section class="solution">
         <div class="container">
           <h2 class="visually-hidden">content</h2>
@@ -121,7 +121,7 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <!-- <section class="team">
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -379,8 +379,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="portfolio">
+      </section> -->
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="digest-title">Our Portfolio</h2>
           <ul class="digest-menu">
@@ -500,9 +500,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="crypt">
+    <!-- <footer class="crypt">
       <div class="container crypt-cover">
         <div class="crypt-first">
           <a class="footer-logo" href="./index.html"
@@ -585,8 +585,8 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="backdrop">
+    </footer> -->
+    <!-- <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="icon-close" width="8" height="8">
@@ -672,6 +672,6 @@
           <button type="submit" class="modal-send-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
