--- a/index.html
+++ b/index.html
@@ -71,52 +71,60 @@
           <h2 class="visually-hidden">content</h2>
           <ul class="solution-menu">
             <li class="solution-list">
-              <div class="icon-solution">
-                <svg class="icon-item" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna-1"></use>
-                </svg>
+              <div class="solution-cover">
+                <div class="icon-solution">
+                  <svg class="icon-item" width="64" height="64">
+                    <use href="./images/icons.svg#icon-antenna-1"></use>
+                  </svg>
+                </div>
+                <h3 class="solution-list-item">Strategy</h3>
+                <p class="solution-text">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
               </div>
-              <h3 class="solution-list-item">Strategy</h3>
-              <p class="solution-text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
             </li>
             <li class="solution-list">
-              <div class="icon-solution">
-                <svg class="icon-item" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock-1"></use>
-                </svg>
+              <div class="solution-cover">
+                <div class="icon-solution">
+                  <svg class="icon-item" width="64" height="64">
+                    <use href="./images/icons.svg#icon-clock-1"></use>
+                  </svg>
+                </div>
+                <h3 class="solution-list-item">Punctuality</h3>
+                <p class="solution-text">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
               </div>
-              <h3 class="solution-list-item">Punctuality</h3>
-              <p class="solution-text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
             </li>
             <li class="solution-list">
-              <div class="icon-solution">
-                <svg class="icon-item" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram-1"></use>
-                </svg>
+              <div class="solution-cover">
+                <div class="icon-solution">
+                  <svg class="icon-item" width="64" height="64">
+                    <use href="./images/icons.svg#icon-diagram-1"></use>
+                  </svg>
+                </div>
+                <h3 class="solution-list-item">Diligence</h3>
+                <p class="solution-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
               </div>
-              <h3 class="solution-list-item">Diligence</h3>
-              <p class="solution-text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
             </li>
             <li class="solution-list">
-              <div class="icon-solution">
-                <svg class="icon-item" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut-1"></use>
-                </svg>
+              <div class="solution-cover">
+                <div class="icon-solution">
+                  <svg class="icon-item" width="64" height="64">
+                    <use href="./images/icons.svg#icon-astronaut-1"></use>
+                  </svg>
+                </div>
+                <h3 class="solution-list-item">Technologies</h3>
+                <p class="solution-text">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
               </div>
-              <h3 class="solution-list-item">Technologies</h3>
-              <p class="solution-text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
             </li>
           </ul>
         </div>
