--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="team">
+      <section class="team">
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -387,8 +387,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="portfolio">
+      </section>
+      <section class="portfolio">
         <div class="container">
           <h2 class="digest-title">Our Portfolio</h2>
           <ul class="digest-menu">
@@ -508,7 +508,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="crypt">
       <div class="container crypt-cover">
