--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       </div>
     </header> -->
     <main>
-      <!-- <section class="slogan">
+      <section class="slogan">
         <div class="container slogan-container">
           <h1 class="slogan-text">Effective Solutions for Your Business</h1>
           <button type="button" class="order-btn">Order Service</button>
         </div>
-      </section> -->
+      </section>
       <section class="solution">
         <div class="container">
           <h2 class="visually-hidden">content</h2>
@@ -135,7 +135,7 @@
           <ul class="team-list">
             <li class="team-list-item team-item">
               <img
-                src="./images/mark.jpg"
+                src="./images/mark-d1x.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -198,7 +198,7 @@
             </li>
             <li class="team-list-item team-item">
               <img
-                src="./images/tom.jpg"
+                src="./images/tom-d1x.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -261,7 +261,7 @@
             </li>
             <li class="team-list-item team-item">
               <img
-                src="./images/camila.jpg"
+                src="./images/camila-d1x.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -324,7 +324,7 @@
             </li>
             <li class="team-list-item team-item">
               <img
-                src="./images/daniel.jpg"
+                src="./images/daniel-d1x.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -395,7 +395,7 @@
             <li class="digest-list digest-item">
               <div class="digest-cover-all">
                 <img
-                  src="./images/bank.jpg"
+                  src="./images/bank-d1x.jpg"
                   alt="bank"
                   width="360"
                   class="portfolio-img"
@@ -414,7 +414,7 @@
             <li class="digest-list digest-item">
               <div class="digest-cover-all">
                 <img
-                  src="./images/cash.jpg"
+                  src="./images/cash-d1x.jpg"
                   alt="cash"
                   width="360"
                   class="portfolio-img"
@@ -433,7 +433,7 @@
             <li class="digest-list digest-item">
               <div class="digest-cover-all">
                 <img
-                  src="./images/mediation.jpg"
+                  src="./images/mediation-d1x.jpg"
                   alt="mediation"
                   width="360"
                   class="portfolio-img"
@@ -452,7 +452,7 @@
             <li class="digest-list digest-item">
               <div class="digest-cover-all">
                 <img
-                  src="./images/taxi.jpg"
+                  src="./images/taxi-d1x.jpg"
                   alt="taxi"
                   width="360"
                   class="portfolio-img"
@@ -471,7 +471,7 @@
             <li class="digest-list digest-item">
               <div class="digest-cover-all">
                 <img
-                  src="./images/saver.jpg"
+                  src="./images/saver-d1x.jpg"
                   alt="saver"
                   width="360"
                   class="portfolio-img"
@@ -490,7 +490,7 @@
             <li class="digest-list digest-item">
               <div class="digest-cover-all">
                 <img
-                  src="./images/cours.jpg"
+                  src="./images/cours-d1x.jpg"
                   alt="cours"
                   width="360"
                   class="portfolio-img"
