--- a/index.html
+++ b/index.html
@@ -64,22 +64,24 @@
         </button>
       </div>
       <div class="mob-menu">
-        <button type="button" class="header-close-btn">
-          <svg class="icon-menu" width="24" height="24">
-            <use href="./images/icons.svg#icon-close-1"></use>
-          </svg>
-        </button>
-        <ul class="mob-menu-list">
-          <li class="mob-menu-item">
-            <a href="./index.html" class="mob-link" target="_blank">Studio</a>
-          </li>
-          <li class="mob-menu-item">
-            <a href="" class="mob-link" target="_blank">Portfolio</a>
-          </li>
-          <li class="mob-menu-item">
-            <a href="" class="mob-link" target="_blank">Contacts</a>
-          </li>
-        </ul>
+        <div class="mob-menu-cover">
+          <button type="button" class="header-close-btn">
+            <svg class="icon-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-close-1"></use>
+            </svg>
+          </button>
+          <ul class="mob-menu-list">
+            <li class="mob-menu-item">
+              <a href="./index.html" class="mob-link" target="_blank">Studio</a>
+            </li>
+            <li class="mob-menu-item">
+              <a href="" class="mob-link" target="_blank">Portfolio</a>
+            </li>
+            <li class="mob-menu-item">
+              <a href="" class="mob-link" target="_blank">Contacts</a>
+            </li>
+          </ul>
+        </div>
         <ul class="mob-list">
           <li class="mob-list-item">
             <a class="mob-address-link" href="mailto:info@devstudio.com"
