--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
           </svg>
         </button>
       </div>
-      <div class="mob-menu">
+      <div class="mob-menu is-ope">
         <div class="mob-menu-cover">
           <button type="button" class="header-close-btn">
-            <svg class="icon-menu" width="24" height="24">
-              <use href="./images/icons.svg#icon-close-1"></use>
+            <svg class="icon-close" width="8" height="8">
+              <use href="./images/icons.svg#icon-cross"></use>
             </svg>
           </button>
           <ul class="mob-menu-list">
@@ -714,7 +714,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="crypt">
+    <footer class="crypt">
       <div class="container crypt-cover">
         <div class="crypt-first">
           <a class="footer-logo" href="./index.html"
@@ -797,8 +797,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
-    <!-- <div class="backdrop">
+    </footer>
+    <div class="backdrop is-ope">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="icon-close" width="8" height="8">
@@ -884,6 +884,6 @@
           <button type="submit" class="modal-send-btn">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
