--- a/index.html
+++ b/index.html
@@ -64,34 +64,32 @@
         </button>
       </div>
       <div class="mob-menu is-ope">
-        <div class="mob-menu-cover">
-          <button type="button" class="header-close-btn">
-            <svg class="icon-close" width="8" height="8">
-              <use href="./images/icons.svg#icon-cross"></use>
-            </svg>
-          </button>
-          <ul class="mob-menu-list">
-            <li class="mob-menu-item">
-              <a href="./index.html" class="mob-link" target="_blank">Studio</a>
-            </li>
-            <li class="mob-menu-item">
-              <a href="" class="mob-link" target="_blank">Portfolio</a>
-            </li>
-            <li class="mob-menu-item">
-              <a href="" class="mob-link" target="_blank">Contacts</a>
-            </li>
-          </ul>
-        </div>
+        <button type="button" class="menu-close-btn">
+          <svg class="icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-cross"></use>
+          </svg>
+        </button>
+        <ul class="mob-menu-list">
+          <li class="mob-menu-item">
+            <a href="./index.html" class="mob-link mob-link-col" target="_blank"
+              >Studio</a
+            >
+          </li>
+          <li class="mob-menu-item">
+            <a href="" class="mob-link" target="_blank">Portfolio</a>
+          </li>
+          <li class="mob-menu-item">
+            <a href="" class="mob-link" target="_blank">Contacts</a>
+          </li>
+        </ul>
         <ul class="mob-list">
           <li class="mob-list-item">
-            <a class="mob-address-link" href="mailto:info@devstudio.com"
+            <a class="mob-mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="mob-list-item">
-            <a class="mob-address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="mob-tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
         <ul class="social mob-social">
@@ -158,60 +156,52 @@
           <h2 class="visually-hidden">content</h2>
           <ul class="solution-menu">
             <li class="solution-list">
-              <div class="solution-cover">
-                <div class="icon-solution">
-                  <svg class="icon-item" width="64" height="64">
-                    <use href="./images/icons.svg#icon-antenna-1"></use>
-                  </svg>
-                </div>
-                <h3 class="solution-list-item">Strategy</h3>
-                <p class="solution-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
+              <div class="icon-solution">
+                <svg class="icon-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
               </div>
+              <h3 class="solution-list-item">Strategy</h3>
+              <p class="solution-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
             </li>
             <li class="solution-list">
-              <div class="solution-cover">
-                <div class="icon-solution">
-                  <svg class="icon-item" width="64" height="64">
-                    <use href="./images/icons.svg#icon-clock-1"></use>
-                  </svg>
-                </div>
-                <h3 class="solution-list-item">Punctuality</h3>
-                <p class="solution-text">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
+              <div class="icon-solution">
+                <svg class="icon-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
               </div>
+              <h3 class="solution-list-item">Punctuality</h3>
+              <p class="solution-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
             </li>
             <li class="solution-list">
-              <div class="solution-cover">
-                <div class="icon-solution">
-                  <svg class="icon-item" width="64" height="64">
-                    <use href="./images/icons.svg#icon-diagram-1"></use>
-                  </svg>
-                </div>
-                <h3 class="solution-list-item">Diligence</h3>
-                <p class="solution-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
+              <div class="icon-solution">
+                <svg class="icon-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
               </div>
+              <h3 class="solution-list-item">Diligence</h3>
+              <p class="solution-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
             </li>
             <li class="solution-list">
-              <div class="solution-cover">
-                <div class="icon-solution">
-                  <svg class="icon-item" width="64" height="64">
-                    <use href="./images/icons.svg#icon-astronaut-1"></use>
-                  </svg>
-                </div>
-                <h3 class="solution-list-item">Technologies</h3>
-                <p class="solution-text">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
+              <div class="icon-solution">
+                <svg class="icon-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
               </div>
+              <h3 class="solution-list-item">Technologies</h3>
+              <p class="solution-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
             </li>
           </ul>
         </div>
@@ -498,13 +488,13 @@
                     srcset="./images/bank-m1x.jpg 1x, ./images/bank-m2x.jpg 2x"
                     media="(max-width: 767px)"
                   />
+                  <img
+                    src="./images/bank-d1x.jpg"
+                    alt="bank"
+                    width="360"
+                    class="portfolio-img"
+                  />
                 </picture>
-                <img
-                  src="./images/bank-d1x.jpg"
-                  alt="bank"
-                  width="360"
-                  class="portfolio-img"
-                />
                 <p class="digest-cover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -877,9 +867,11 @@
                   <use href="./images/icons.svg#icon-check-1"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="check-privacy" href="">Privacy Policy</a></label
-            >
+              <span>
+                I accept the terms and conditions of the
+                <a class="check-privacy" href="">Privacy Policy</a>
+              </span>
+            </label>
           </div>
           <button type="submit" class="modal-send-btn">Send</button>
         </form>
