--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </svg>
         </button>
       </div>
-      <div class="mob-menu is-ope">
+      <div class="mob-menu is-open">
         <button type="button" class="menu-close-btn">
           <svg class="icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-cross"></use>
@@ -92,7 +92,7 @@
             <a class="mob-tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
-        <ul class="social mob-social">
+        <ul class="mob-social">
           <li class="social-item">
             <a
               class="social-link"
