--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </svg>
         </button>
       </div>
-      <div class="mob-menu is-open">
+      <div class="mob-menu is-ope">
         <button type="button" class="menu-close-btn">
           <svg class="icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-cross"></use>
